Refactor ApiClient to use HttpClient for HTTP requests; add ApiResponse class for unified response handling; implement message deletion functionality in MessageApiClient; update controllers to manage user sessions and navigation.