@@ -1,11 +1,14 @@
 package service;
 
 import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.PropertyNamingStrategy;
 
 import java.io.*;
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
+import java.net.http.HttpClient;
+import java.net.http.HttpRequest;
+import java.net.http.HttpResponse;
 
 // Interface jota pystyy hyödyntää kaikissa service luokan api pyynnöissä.
 
@@ -15,70 +18,35 @@ public interface ApiClient {
 
 
     //Method needs only a right url and object as parameters
-    default HttpResponse sendPostRequest(String urlString, Object body) throws IOException {
+    default ApiResponse sendPostRequest(String urlString, Object body) throws IOException, InterruptedException {
+        String requestBody = objectMapper.writeValueAsString(body);
 
-        // Opens connection to the backend endpoint
-        URL url = new URL(urlString);
-        HttpURLConnection http = (HttpURLConnection) url.openConnection();
+        HttpRequest request = HttpRequest.newBuilder().
+                POST(HttpRequest.BodyPublishers.ofString(requestBody))
+                .uri(URI.create(urlString))
+                .header("Content-Type", "Application/json")
+                .build();
 
-        // POST request
-        http.setRequestMethod("POST");
-        http.setDoOutput(true);
-        http.setRequestProperty("Content-Type", "application/json");
-
-        // Convert our Java  object into a JSON string
-        String json = objectMapper.writeValueAsString(body);
-
-        //    Write the JSON to the request body and
-        //    OutputStream sends data to the server
-        try (OutputStream os = http.getOutputStream()) {
-            os.write(json.getBytes("utf-8"));
-        }
-        int code = http.getResponseCode();
-        String responseBody = readResponse(http);
-        return new HttpResponse(code, responseBody);
+        java.net.http.HttpResponse<String> response = HttpClient.newHttpClient().send(request, java.net.http.HttpResponse.BodyHandlers.ofString());
+            return new ApiResponse(response.statusCode(), response.body());
     }
 
-    default String sendGetRequest(String urlString) throws IOException {
+    default void sendGetRequest(String urlString) throws IOException {
         URL url = new URL(urlString);
         HttpURLConnection http = (HttpURLConnection) url.openConnection();
         http.setRequestMethod("GET");
-        return readResponse(http);
     }
 
-//    default String sendGetRequestById() {
-//        URL url = new URL(urlString);
-//        HttpURLConnection http = (HttpURLConnection) url.openConnection();
-//        http.setRequestMethod("GET");
-//        return readResponse(http);
-//    }
+    default ApiResponse sendDeleteRequest(String urlString, String token) throws IOException, InterruptedException {
+        HttpRequest request = HttpRequest.newBuilder()
+                .DELETE()
+                .uri(URI.create(urlString))
+                .header("Authorization", "Bearer " + token)
+                .build();
 
-    default String readResponse(HttpURLConnection http) throws IOException {
-        // Get the HTTP response code
-        int code = http.getResponseCode();
-        InputStream stream;
+        HttpResponse<String> response = HttpClient.newHttpClient().send(request, HttpResponse.BodyHandlers.ofString());
+            return new ApiResponse(response.statusCode(), response.body());
 
-        // checks the response code
-        if (code >= 200 && code < 300) {
-            stream = http.getInputStream();
-        } else {
-            stream = http.getErrorStream();
-            if (stream == null) {
-                return "Error: Server returned HTTP " + code + " but no message body";
-            }
-        }
-
-        //  Read the server response (body)
-        //  InputStream reads data sent back from the server
-        try (BufferedReader br = new BufferedReader(new InputStreamReader(stream, "utf-8"))) {
-            StringBuilder response = new StringBuilder();
-            String line;
-            while ((line = br.readLine()) != null) {
-                response.append(line.trim());
-            }
-            return response.toString();
-        }
     }
-
-
 }
+
